force-app/main/default/objects/Investment__c/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations</label>
    <referenceTo>Operations__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>